--- a/Appendix.tex
+++ b/Appendix.tex
@@ -10,18 +10,7 @@
 \label{ch:fieldmea}
 % -----------------------------------------------------------------------------
 \section{Water Samples}
-\begin{figure}[h]
-% \subfloat[]{
-\centering
-    \includegraphics[width=10cm]{/Users/javier/Desktop/Javier/PHD_RIT/LDCM/WaterQualityProtocols/Images/WaterQualityProtocolDiagram.png}%}\hspace{0.5cm}
-% \subfloat[]{   
-%     \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/20122_Winter/Instrumentation/report3/Images/SideFluoSpec.jpg}}
-    \vspace{0.5cm}
-   \caption[]{\label{fig:ProtocolsDiagram} Protocols Diagram.}
-\end{figure}
- %------------- 
 
-$a_{YS}$ cannot be determined directly. An approximation of $a_{YS}$ may be obtained by a spectrophotometer scan of a filtered sample (\cite{Bukata1995}, p.125). Spectrophotometer used in normal mode do not measure true absorbance but {\color{red} attenuance} because all the scattered light is measured. To overcome this, the cells can be placed close to a wide photomultiplier (\cite{Kirk1983}, p.51).
 
 \subsection{Equipment}
 
@@ -58,9 +47,9 @@ $a_{YS}$ cannot be determined directly. An approximation of $a_{YS}$ may be obta
   \item Take a bottle from the cooler and write the bottle label down in the ``Bottle Number'' section on the data sheet along
   \item Rinse the Nalgene Bottle and cap at least 3 times with water before filling
   \item Submerge bottle with the cap on it in an undisturbed location.
-  \item Uncap the submerged bottle  to take subsurface water sample (avoid to take water from the surface)[\cite{Montana08}]
+  \item Uncap the submerged bottle  to take subsurface water sample (avoid to take water from the surface) \cite{Montana08} 
   \item Cap the bottle with the bottle still submerged
-  \item Store bottle up-right immediately in the cooler in order to avoid direct sun light (\cite{Mueller1995})
+  \item Store bottle up-right immediately in the cooler in order to avoid direct sun light \cite{Mueller1995}
   \item Once off the water, text to Nina or person in charge of the collection for example: ``Safe, Long Pond team''
   \item Take water some water samples to the Monroe County Environmental Lab, if applicable.
   \item Place the sample bottles in the refrigerator as soon as possible
@@ -68,7 +57,7 @@ $a_{YS}$ cannot be determined directly. An approximation of $a_{YS}$ may be obta
 \end{enumerate}
 Notes: 
 \begin{itemize}
-  \item Do not take any personal electronic device with you (recommended)
+  \item Do not take any personal electronic device with you (recommended) to avoid dropping it on the water
   \item Storage car keys in zipped bag in you packet
   \item In case of bad weather conditions that do not allow paddle the canoes, take at least water samples from the Charlotte pier with the bucket
 \end{itemize}
@@ -76,11 +65,11 @@ Notes:
 % -----------------------------------------------------------------------------
 \section{\texorpdfstring{$R_{rs}$}{Rrs}}
 
-method described by \cite{Mobley:1999} for measuring the spectra of the downwelling irradiance $E_d$, the surface reflected sky radiance $L_s$, and the water-leaving radiance $L_w$ for each site 
+% method described by \cite{Mobley:1999} for measuring the spectra of the downwelling irradiance $E_d$, the surface reflected sky radiance $L_s$, and the water-leaving radiance $L_w$ for each site 
 
-This section describes how to take the remote-sensing measurement using a single instrument that measures radiance (spectroradiometer or spectrometer) such as an SVC or ASD instrument. This procedure is taken from \cite{Mobley:1999} and \cite{Mueller1995}. 
+This section describes how to take the remote-sensing measurement using a single instrument that measures radiance (spectroradiometer or spectrometer) such as a SVC \cite{SVCHR1024i} or an ASD \cite{ASDManual2012} instrument. This procedure is taken from \cite{Mobley:1999} and \cite{Mueller1995}. 
 
-The remote-sensing reflectance $R_{rs}$ is defined as
+Recall that the \gls{rrs} is defined as
 
 \begin{equation}\label{eq:Rrs}
 	R_{rs}(\theta,\phi,\lambda)=\frac{L_w(\theta,\phi,\lambda)}{E_d(\lambda)}
@@ -122,7 +111,7 @@ Description: $L_g$ is measured with the sensor pointing downward in the same dir
 
 Description: $L_t$ is measured with the sensor pointing downward toward the water surface in the direction $\approx \pi-\theta_v = 140^\circ$ from nadir with $\theta_v = 40^\circ$ and $\phi_v \approx 135^\circ$ or $\phi_v \approx -135^\circ$ from the Sun as illustrated in \autoref{fig:Ltmea}.
 
-\begin{figure}[h]
+\begin{figure}[htb]
 \centering
     \includegraphics[width=10cm]{/Users/javier/Desktop/Javier/PHD_RIT/LDCM/WaterQualityProtocols/Latex/Images/Lgmea.png}
     \vspace{0.5cm}
@@ -133,7 +122,7 @@ Description: $L_t$ is measured with the sensor pointing downward toward the wate
 
 Description: $L_{sky}$ is measured with the sensor pointing upward toward the sky in the direction $\approx \theta_v = 40^\circ$ from nadir and $\phi_v \approx 135^\circ$ or $\phi_v \approx -135^\circ$ from the Sun as illustrated in \autoref{fig:Lskymea}.
 
-\begin{figure}[h]
+\begin{figure}[htb]
 \centering
     \includegraphics[width=10cm]{/Users/javier/Desktop/Javier/PHD_RIT/LDCM/WaterQualityProtocols/Latex/Images/Lskymea.png}
     \vspace{0.5cm}
@@ -161,20 +150,36 @@ Description: $L_{sky}$ is measured in the same fashion described in the previous
 \end{itemize}
 {\bf Notes:}
 \begin{itemize}
-	\item Wear dark clothes, preferable black.
-	\item Avoid any reflection from nearby objects in the boat or ship. 
+	\item Wear dark clothes, preferable black, to avoid contamination from adjacent objects.
+	\item Avoid any reflection from nearby objects in the boat or ship by covering the ship's side with a black turf. 
 \end{itemize}
+
+
+
 % @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 \chapter{Lab Measurements}
 \label{ch:labmea} 
+
+
+\begin{figure}[htb]
+% \subfloat[]{
+\centering
+    \includegraphics[width=14cm]{/Users/javier/Desktop/Javier/PHD_RIT/LDCM/WaterQualityProtocols/Images/WaterQualityProtocolDiagram.png}%}\hspace{0.5cm}
+% \subfloat[]{   
+%     \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/20122_Winter/Instrumentation/report3/Images/SideFluoSpec.jpg}}
+    \vspace{0.5cm}
+   \caption[]{\label{fig:ProtocolsDiagram} Lab measurement protocols diagram.}
+\end{figure}
+ %------------- 
+
+% $a_{YS}$ cannot be determined directly. An approximation of $a_{YS}$ may be obtained by a spectrophotometer scan of a filtered sample (\cite{Bukata1995}, p.125). Spectrophotometer used in normal mode do not measure true absorbance but {\color{red} attenuance} because all the scattered light is measured. To overcome this, the cells can be placed close to a wide photomultiplier (\cite{Kirk1983}, p.51).
 % -----------------------------------------------------------------------------
 \section{IOPs}
-\subsection{Chlorophyll}
-Spectrophotometric methods
-
-Method described by \cite{Mitchell2002} and \cite{Cleveland1993}
-
-\subsection{Minerals}
+%*******************************
+\subsection{Chlorophyll absorption coefficients}
+The spectrophotometric methods are described by \cite{Mitchell2002} and \cite{Cleveland1993}.
+%*******************************
+\subsection{Minerals absorption coefficients}
 
 %*******************************
 \subsubsection{Equipment}
@@ -222,9 +227,10 @@ Method described by \cite{Mitchell2002} and \cite{Cleveland1993}
 \end{enumerate}
 %*******************************
 \subsubsection{Calculations}
-%*******************************
 
-\subsection{CDOM}
+
+%*******************************
+\subsection{CDOM absorption coefficients}
 %*******************************
 \subsubsection{Equipment}
 %*******************************
@@ -273,21 +279,44 @@ Method described by \cite{Mitchell2002} and \cite{Cleveland1993}
 \end{itemize}
 % -----------------------------------------------------------------------------
 \section{Concentrations}
-\subsection{Chlorophyll-{\it a}}
+\subsection{Chlorophyll-{\it a} concentration}
 
-Method described by \cite{Lorenzen:1967fk} and \cite{Ritchie:2008eu}.
+Methods described by \cite{Lorenzen:1967fk} and \cite{Ritchie:2008eu}.
 
-\subsection{TSS}
+\subsubsection{Calculations}
+
+The calculations used \cite{Lorenzen:1967fk} are:
+
+\begin{equation}
+  C_a = \frac{26.7(655_o - 665_a)\times v}{V\times l}
+\end{equation}
+
+\begin{equation}
+  Pheo = \frac{26.7([1.7\times 665_a]-665_o)\times v}{V\times l}
+\end{equation}
+
+\noindent where: \\
+$665_o = 665 - (750-blank~value)~before~acidification$\\
+$665_a = 665 - (750-blank~value)~after~acidification$  \\
+$v = $ volume of extract in mililiters $[ml]$ \\
+$V = $ volume of water filtered in liters $[L]$ \\
+$l = $ pathlength of cuvette ($1cm$ for the cuvette used) \\
+
+Note: concentrations are in $[mg/m^3]$ or $[\mu g/L]$.
+
+
+\subsection{Total suspended solids (TSS)}
 
 \subsubsection{Equipment}
 %*******************************
-\subsubsection*{Filtration}
+% \subsubsection*{Filtration}
 \begin{itemize}
 
   \item TCLP filters ($47 mm$, $0.7\mu m$)
   \item Vacuum
   \item Balance
   \item Graduate cylinder
+  \item Forceps
 
 \end{itemize}
 
@@ -314,6 +343,76 @@ SPM_{\displaystyle concentration} = \frac{[final~filter~weight~(mg) - tare~filte
 % @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 \chapter{HydroLight Specification}
 
-blah, blah, blah
+
+\singlespacing
+\lstset{language=bash,caption={Example of an input file used in Ecolight.},label=code:EcolightInput}
+\renewcommand{\lstlistingname}{Code}
+\begin{lstlisting}
+0,400,2500,.02,488,.00026,1,5.3
+FFbb determination for ONTOS
+OutputEL
+0,1,0,0,0,1
+2,1,0,2,3
+4,4
+0,flaCH,flaCD,flaSM
+0,2,440,0.1,0.014
+0,0,440,0.1,0.014
+0,4,440,1,0.01712
+0,0,440,0.1,0.014
+/home/jxc4005/hydrolight52Javier_install/data/H2OabDefaults_FRESHwater.txt
+/home/jxc4005/HYDROLIGHT/EL5.2/user_inputs/astar_CH_ONTOS140929_CountyUncorr.txt
+dummyastar.txt
+/home/jxc4005/HYDROLIGHT/EL5.2/user_inputs/astar_SM_ONTOS140929_County.txt
+4, 660, 0.189, 1, 0.751, -999
+0,-999,-999,-999,-999,-999
+-1,-999,0,-999,-999,-999
+0,-999,-999,-999,-999,-999
+bstarDummy.txt
+/home/jxc4005/HYDROLIGHT/EL5.2/user_inputs/ChloroSct.txt
+dummybstar.txt
+/home/jxc4005/HYDROLIGHT/EL5.2/user_inputs/susmin.sct
+0, 0, 550, 0.01, 0
+0, 0, 0, 0, 0
+-1, 0, 0, 0, 0
+0, 0, 550, 0.01, 0
+pureh2o.dpf
+user_dpfCHL
+isotrop.dpf
+user_dpfTSS_b
+ 120
+400, 405, 410, 415, 420, 425, 430, 435, 440, 445,
+450, 455, 460, 465, 470, 475, 480, 485, 490, 495,
+500, 505, 510, 515, 520, 525, 530, 535, 540, 545,
+550, 555, 560, 565, 570, 575, 580, 585, 590, 595,
+600, 605, 610, 615, 620, 625, 630, 635, 640, 645,
+650, 655, 660, 665, 670, 675, 680, 685, 690, 695,
+700, 705, 710, 715, 720, 725, 730, 735, 740, 745,
+750, 755, 760, 765, 770, 775, 780, 785, 790, 795,
+800, 805, 810, 815, 820, 825, 830, 835, 840, 845,
+850, 855, 860, 865, 870, 875, 880, 885, 890, 895,
+900, 905, 910, 915, 920, 925, 930, 935, 940, 945,
+950, 955, 960, 965, 970, 975, 980, 985, 990, 995,
+1000,
+0,0,0,0,2
+2, 3, 48, 0, 0
+272, 43.28085,-77.61919, 29.92, 1, 80, 2.5, 15, 4.99746, 300
+4.99746, 1.34, 20, 35
+0, 0
+0, 5, 0, 5, 10, 15, 20, 
+/home/jxc4005/hydrolight52Javier_install/data/H2OabDefaults_FRESHwater.txt
+1
+/home/jxc4005/hydrolight5Aaron_install/data/user/mascot_ac9.txt
+dummyFilteredAc9.txt
+dummyHscat.txt
+/home/jxc4005/hydrolight5Aaron_install/data/user/Chlzdata_10m.txt
+dummyComp.txt
+dummyR.bot
+dummydata.txt
+/home/jxc4005/hydrolight5Aaron_install/data/user/Chlzdata_10m.txt
+dummyComp.txt
+dummyComp.txt
+/home/jxc4005/hydrolight5Aaron_install/data/user/Ed_total.txt
+/home/jxc4005/hydrolight5Aaron_install/data/MyBiolumData.txt
+\end{lstlisting}
 
 \end{appendices}
