Added  more Dr. Schott's corrections. All citations added...

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -18,7 +18,7 @@
 \newacronym{hyspiri}{HyspIRI}{Hyperspectral Infrared Imager}
 \newacronym{iops}{IOPs}{inherent optical properties}
 \newacronym{ldcm}{LDCM}{Landsat Data Continuity Mission}
-\newacronym{ledaps}{LEDAPS}{Disturbance Adaptive Processing System}
+\newacronym{ledaps}{LEDAPS}{Landsat Ecosystem Disturbance Adaptive Processing System}
 \newacronym{lut}{LUT}{look-up-table}
 \newacronym{mcp}{MCP}{modified cubic polynomial equation}
 \newacronym{meris}{MERIS}{MEdium Resolution Imaging Spectrometer}
