--- a/Summary.tex
+++ b/Summary.tex
@@ -18,6 +18,9 @@ The \gls{mobelm} algorithm tries to avoid the use of field reflectance ground-tr
 % Results from MoB-ELM
 The MoB-ELM algorithm was applied to {three \todo{three?}} Landsat 8 images in order to test the retrieval algorithm. Although, only the \gls{rrs} results from the 2013 image were compared with {\it in situ} data for validation. First, the results were compared with the traditional \gls{elm} algorithm using the ground-truth data for the dark and bright pixel. This comparison included the spectra of four sites in the scene. The difference is less than one reflectance unit (i.e. one percentage point). 
 
+% Mention this:
+% One problem with using the Gordon and Wang approach on Landsat 8 imagery is that it requires a sufficient \gls{snr} over water in order to discriminate the water-leaving signal from the instrument noise. This could be particular important for OLI since it has a noisy SWIR bands, and so derived ocean color products that use these bands for the aerosol determination can be noisy \cite{Vanhellemont2014a}.
+
 % ----- added From SPIE SD
 % \subsection{Comparison with Standard Algorithms}
 For further validation, the \gls{mobelm} algorithm was compared with three algorithms utilizing the NASA's standard algorithms based on the methods developed by \cite{Gordon:1994}. The \gls{rrs} retrieved from these atmospheric correction algorithms were compared against each other. There are better agreements in band 3 and 4 than in bands 1 and 2 for all algorithms, which can be concluded from the RMSE values (\autoref{tab:Sites}). Also, the spectral \gls{rrs} from all four algorithms were compared with coincident {\it in situ} data. This comparison showed that the \gls{mobelm} algorithm perform the best overall.  When compared with {\it in situ} data, the MoB-ELM and Gordon and Wang's algorithm from SeaDAS (SeaDAS-SWIR) show similar results for all bands (\autoref{fig:NRMSE130919_RRS}). The results from the Gordon and Wang's algorithm from Acolite (Acolite-SWIR) shows the largest disagreement (\autoref{fig:NRMSE130919_RRS}). Then, the \gls{nrmse} for each band was calculated using the {\it in situ} data from the 09-19-2013 scene. Again, the \gls{mobelm} algorithm performs the best overall. \todo{include rest of the images in the NRMSE calculation for Rrs}.
