--- a/Appendix.tex
+++ b/Appendix.tex
@@ -281,7 +281,7 @@ The spectrophotometric methods are described by \cite{Mitchell2002} and \cite{Cl
 \section{Concentrations}
 \subsection{Chlorophyll-{\it a} concentration}
 
-Methods described by \cite{Lorenzen:1967fk} and \cite{Ritchie:2008eu}.
+\todo{Show comparison of Monroe county to RIT Lab}Methods described by \cite{Lorenzen:1967fk} and \cite{Ritchie:2008eu}.
 
 \subsubsection{Calculations}
 
