--- a/Methodology.tex
+++ b/Methodology.tex
@@ -526,6 +526,8 @@ The radiance spectrum for the dark pixel is obtained from the corresponding ROI 
 
 As an example, \autoref{fig:ELMpxsENVI} shows the different spectra used to perform the MoB-ELM, where four different spectra can be seen: one reflectance and one radiance spectra for the bright pixel (obtained using the PIF extraction over the Landsat reflectance product and Landsat 8 image, respectively), one reflectance spectra for the dark pixel (obtained from Ecolight/Hydrolight), and one radiance spectra for bright pixel (obtained from the statistics of a ROI over water in the Landsat 8 image). These spectra are used to atmospherically correct the Landsat 8 image using the ENVI Classic software \cite{ENVIUserGuide}. This is performed using the ``Empirical Line'' algorithm of the ``Calibration Utilities'' in ENVI classic, where the Landsat 8 image is used as the input image, and the reflectance spectra are labeled as ``field spectra'' and the radiance spectra are labeled as ``data spectra.'' The product of this process is an image in reflectance values, which will be used to perform the retrieval of water constituents described in \S\ref{sec:retrieval} below. Note that the Landsat 8 image used was not glint corrected.
 
+\todo{Dr. Schott: check this paragraph!}One of the great values of this approach is that it can correct for slight mismatches between the model and observations such as shown in \autoref{fig:BestMatchONTNS}. Because the dark reflectance uses a model derived spectrum, it will pull all the atmospherically corrected data up slightly at the shorter wavelengths, which will be a better match to the model based LUT that will be used to generate the CPAs.
+
 \noindent {\bf MoB-ELM Correction Summary:}
 \begin{enumerate}[itemsep=2pt,parsep=2pt]
   \item Select reflectance of the bright pixel from the Landsat 8 Surface Reflectance \gls{cdr} product by using a PIF mask or a particular target
