--- a/Results.tex
+++ b/Results.tex
@@ -25,7 +25,7 @@ An example of a Landsat 8 image that includes the area of study is illustrated i
 
 \begin{figure}[htb]
   \centering
-  \includegraphics[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/groundtruth-sitenames-no-ends.jpg}
+  \includegraphics[width=10cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/groundtruth-sitenames-no-ends.jpg}
   \caption{Sites in the Rochester Embayment for the water sample collection on September, $19^{th}$, 2013.\label{fig:0910913Sites} } 
   % \vspace{1cm}
 \end{figure}
@@ -35,11 +35,11 @@ Water samples are collected for each site in dark Nalgene bottles (see Appendix~
 \begin{table}[htb]
   \caption{Summary of 2013, 2014 and 2015 data collections. Three images were used for testing the retrieval (green filling).}
   \centering
-  \includegraphics[width=13cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/Collect131415.png}
+  \includegraphics[width=11cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/Collect131415.png}
   \label{tab:collect}
 \end{table}
 
-\begin{figure}[htb]
+\begin{figure}[htb!]
     \begin{minipage}[c]{0.48\linewidth}
       \centering
     \begin{tikzpicture}
@@ -64,27 +64,33 @@ Water samples are collected for each site in dark Nalgene bottles (see Appendix~
       \caption{Landsat 8 images acquired on (a) 09-29-2014 (scene LC80170302014272LGN00) and (b) 09-16-2015 (scene LC80170302015259LGN00). Study area indicated in red boxes. \label{fig:L8Images1415} }
 \end{figure}  
 
-\begin{figure}[htb!]
+\begin{figure}[h]
+      \begin{minipage}[c]{1.0\linewidth}
+      \centering
+      \begin{overpic}[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80160302013262LGN00_AreaOfStudy.png}
+       \put (95,45) {(a)}
+      \end{overpic} 
+    \end{minipage}
     \begin{minipage}[c]{1.0\linewidth}
       \centering
       \begin{overpic}[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80170302014272LGN00_AreaOfStudy.png}
-       \put (95,45) {(a)}
+       \put (95,45) {(b)}
       \end{overpic} 
     \end{minipage}
     \begin{minipage}[d]{1.0\linewidth}
       \centering
       \begin{overpic}[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/LC80170302015259LGN00_AreaOfStudy.png}
-        \put (95,45) {(b)}
+        \put (95,45) {(c)}
       \end{overpic}
     \end{minipage} 
-      \caption[Area of study from the Landsat 8 images acquired on (a) 09-29-2014 and (b) 09-16-2015.]{Area of study from the Landsat 8 images acquired on (a) 09-29-2014 (scene LC80170302014272LGN00) and (b) 09-16-2015 (scene LC80170302015259LGN00). \label{fig:ROI_L8Images1415} }
+      \caption[Area of study from the Landsat 8 images acquired on (a) 09-19-2013, (b) 09-29-2014 and (c) 09-16-2015.]{Area of study from the Landsat 8 images acquired on (a) 09-19-2013 (scene LC80160302013262LGN00) (b) 09-29-2014 (scene LC80170302014272LGN00) and (c) 09-16-2015 (scene LC80170302015259LGN00). \label{fig:ROI_L8Images1415} }
 \end{figure}  
 
 % ------------------------------
 \section{Laboratory Measurements}
 After collection, these water samples were analyzed in the lab at the Rochester Institute of Technology (RIT), and concentration and IOPs for each CPA were measured following the procedures described by \cite{Mueller1995} (see Appendix~\ref{ch:labmea} for more details about lab measurements). These measurements are utilized as input to Ecolight for the \gls{lut} generation of the retrieval process and the black pixel determination for the MoB-ELM atmospheric correction algorithm. Also, some are utilized for validation of the retrieval process. The $C_a$ and $TSS$ measurements were validated by comparing with measurements analyzed by a credible lab (Monroe County Environmental Laboratory). This comparison between labs showed agreement in the measurements. \autoref{tab:collect} shows the measurements available. Examples of IOPs measured in the lab from the 09-19-13 collection for chlorophyll, CDOM and minerals are shown in \autoref{fig:IOPastLONGS}.
 
-\begin{figure}[htb]
+\begin{figure}[htb!]
     \begin{minipage}[c]{0.48\linewidth}
       \centering
     \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/CHLaastLONGSJavier-eps-converted-to.pdf}
@@ -903,7 +909,7 @@ The results of the retrieval for the 09-19-2013 scene are illustrated in \autore
 
 % Note that the image to be analyzed needs to only include a bright target and not necessary a big urban area in order to determine the bright pixel from the Landsat surface reflectance product.\\
 
-The developed retrieval was also applied to the image acquired on 09-29-2014 (\autoref{fig:ROI_L8Images1415}.(a)). This image was analyzed in a similar fashion to the 09-19-2013 scene except that the reflectance of the bright pixel target used for the MoB-ELM algorithm was also predicted by Ecolight using data for the most eutrophic pond (Cranberry Pond), and not from a pixel in the Landsat Reflectance product. This approach is attractive when a wide range of water quality conditions are present and concentration measurements are available of bright and dark water targets. This approach may improve results where glint is present as it compensates for not only atmospheric effects but any other approximately linear phenomena that would modify the reflected energy leaving the water volume. Note that glint effects were not specifically compensated for in the atmospheric correction process and future efforts using the urban region bright target approach will need to compensate for glint when it is present. The concentration maps for this second scene are illustrated in \autoref{fig:CPAsMaps140929} again showing reasonable patterns in the lake and ponds. 
+The developed retrieval was also applied to the image acquired on 09-29-2014 (\autoref{fig:ROI_L8Images1415}.(b)). This image was analyzed in a similar fashion to the 09-19-2013 scene ((\autoref{fig:ROI_L8Images1415}.(a))) except that the reflectance of the bright pixel target used for the MoB-ELM algorithm was also predicted by Ecolight using data for the most eutrophic pond (Cranberry Pond), and not from a pixel in the Landsat Reflectance product. This approach is attractive when a wide range of water quality conditions are present and concentration measurements are available of bright and dark water targets. This approach may improve results where glint is present as it compensates for not only atmospheric effects but any other approximately linear phenomena that would modify the reflected energy leaving the water volume. Note that glint effects were not specifically compensated for in the atmospheric correction process and future efforts using the urban region bright target approach will need to compensate for glint when it is present. The concentration maps for this second scene are illustrated in \autoref{fig:CPAsMaps140929} again showing reasonable patterns in the lake and ponds. 
 
 
 % ------------
